--- a/Bibliography/bibliography_doi.bib
+++ b/Bibliography/bibliography_doi.bib
@@ -1,149 +1,131 @@
-@InProceedings{ Artho04,
-	author       = "Cyrille Artho and Klaus Havelund and Armin Biere",
-	title        = "Using Block-Local Atomicity to Detect Stale-Value Concurrency Errors",
-	booktitle    = "ATVA",
-	year         = "2004",
-	pages        = "150--164",
-	crossref     = "DBLP:conf/atva/2004",
-	bibsource    = "DBLP, http://dblp.uni-trier.de",
-	ee           = "http://springerlink.metapress.com/openurl.asp?genre=article{\&}issn=0302-9743{\&}volume=3299{\&}spage=150",
+@ARTICLE{wearablesAndIOT,
+  author={John Dian, F. and Vahidnia, Reza and Rahmati, Alireza},
+  journal={IEEE Access}, 
+  title={Wearables and the Internet of Things (IoT), Applications, Opportunities, and Challenges: A Survey}, 
+  year={2020},
+  volume={8},
+  number={},
+  pages={69200-69211},
+  keywords={Biomedical monitoring;Temperature sensors;Monitoring;Internet of Things;Wearable sensors;Temperature measurement;Smart wearables;Internet of Things;cellular IoT},
+  doi={10.1109/ACCESS.2020.2986329}}
+
+@Article{16sensors,
+AUTHOR = {Ciniglio, Alfredo and Guiotto, Annamaria and Spolaor, Fabiola and Sawacha, Zimi},
+TITLE = {The Design and Simulation of a 16-Sensors Plantar Pressure Insole Layout for Different Applications: From Sports to Clinics, a Pilot Study},
+JOURNAL = {Sensors},
+VOLUME = {21},
+YEAR = {2021},
+NUMBER = {4},
+ARTICLE-NUMBER = {1450},
+URL = {https://www.mdpi.com/1424-8220/21/4/1450},
+PubMedID = {33669674},
+ISSN = {1424-8220},
+ABSTRACT = {The quantification of plantar pressure distribution is widely done in the diagnosis of lower limbs deformities, gait analysis, footwear design, and sport applications. To date, a number of pressure insole layouts have been proposed, with different configurations according to their applications. The goal of this study is to assess the validity of a 16-sensors (1.5 × 1.5 cm) pressure insole to detect plantar pressure distribution during different tasks in the clinic and sport domains. The data of 39 healthy adults, acquired with a Pedar-X® system (Novel GmbH, Munich, Germany) during walking, weight lifting, and drop landing, were used to simulate the insole. The sensors were distributed by considering the location of the peak pressure on all trials: 4 on the hindfoot, 3 on the midfoot, and 9 on the forefoot. The following variables were computed with both systems and compared by estimating the Root Mean Square Error (RMSE): Peak/Mean Pressure, Ground Reaction Force (GRF), Center of Pressure (COP), the distance between COP and the origin, the Contact Area. The lowest (0.61%) and highest (82.4%) RMSE values were detected during gait on the medial-lateral COP and the GRF, respectively. This approach could be used for testing different layouts on various applications prior to production.},
+DOI = {10.3390/s21041450}
 }
 
-@online{ Parkins2017,
-	author       = "Parkins, David",
-	booktitle    = "Economist (United Kingdom)",
-	issn         = "00130613",
-	mendeley     = "I4.0/BigData",
-	number       = "9035",
-	title        = "{Regulating the internet giants: The world's most valuable resource is no longer oil, but data}",
-	url          = "https://www.economist.com/leaders/2017/05/06/the-worlds-most-valuable-resource-is-no-longer-oil-but-data?fbclid=IwAR1EaO3g6OJoDuhrHBNyqQJAqR2NyhvcZ07uexTWa3Hujq0azNMVHKhQido",
-	urldate      = "2020-01-21",
-	volume       = "413",
-	year         = "2017",
+@Article{biomechanicalPerfomance,
+AUTHOR = {McDevitt, Sam and Hernandez, Haley and Hicks, Jamison and Lowell, Russell and Bentahaikt, Hamza and Burch, Reuben and Ball, John and Chander, Harish and Freeman, Charles and Taylor, Courtney and Anderson, Brock},
+TITLE = {Wearables for Biomechanical Performance Optimization and Risk Assessment in Industrial and Sports Applications},
+JOURNAL = {Bioengineering},
+VOLUME = {9},
+YEAR = {2022},
+NUMBER = {1},
+ARTICLE-NUMBER = {33},
+URL = {https://www.mdpi.com/2306-5354/9/1/33},
+PubMedID = {35049742},
+ISSN = {2306-5354},
+ABSTRACT = {Wearable technologies are emerging as a useful tool with many different applications. While these devices are worn on the human body and can capture numerous data types, this literature review focuses specifically on wearable use for performance enhancement and risk assessment in industrial- and sports-related biomechanical applications. Wearable devices such as exoskeletons, inertial measurement units (IMUs), force sensors, and surface electromyography (EMG) were identified as key technologies that can be used to aid health and safety professionals, ergonomists, and human factors practitioners improve user performance and monitor risk. IMU-based solutions were the most used wearable types in both sectors. Industry largely used biomechanical wearables to assess tasks and risks wholistically, which sports often considered the individual components of movement and performance. Availability, cost, and adoption remain common limitation issues across both sports and industrial applications.},
+DOI = {10.3390/bioengineering9010033}
 }
 
-@Misc{ Artho03,
-	author       = "C. Artho and K. Havelund and A. Biere",
-	title        = "High-Level Data Races",
-	text         = "C. Artho, K. Havelund, and A. Biere. High-Level Data Races. In VVEIS'03, The First International Workshop on Verification and Validation of Enterprise Information Systems, April 2003. Angers, France.",
-	year         = "2003",
-	url          = "citeseer.ist.psu.edu/artho03highlevel.html",
+@Article{performanceAndTactics,
+AUTHOR = {Lutz, Jonas and Memmert, Daniel and Raabe, Dominik and Dornberger, Rolf and Donath, Lars},
+TITLE = {Wearables for Integrative Performance and Tactic Analyses: Opportunities, Challenges, and Future Directions},
+JOURNAL = {International Journal of Environmental Research and Public Health},
+VOLUME = {17},
+YEAR = {2020},
+NUMBER = {1},
+ARTICLE-NUMBER = {59},
+URL = {https://www.mdpi.com/1660-4601/17/1/59},
+PubMedID = {31861754},
+ISSN = {1660-4601},
+ABSTRACT = {Micro-electromechanical systems (MEMS) have reduced drastically in size, cost, and power consumption, while improving accuracy. The combination of different sensor technologies is considered a promising step in the monitoring of athletes. Those “wearables” enable the capturing of relevant physiological and tactical information in individual and team sports and thus replacing subjective, time-consuming and qualitative methods with objective, quantitative ones. Prior studies mainly comprised sports categories such as: targeting sports, batting and fielding games as well as net and wall games, focusing on the detection of individual, non-locomotive movements. The increasing capabilities of wearables allow for more complex and integrative analysis expanding research into the last category: invasion sports. Such holistic approaches allow the derivation of metrics, estimation of physical conditions and the analysis of team strategic behavior, accompanied by integrative knowledge gains in technical, tactical, physical, and mental aspects of a sport. However, prior and current researchers find the precise measurement of the actual movement within highly dynamic and non-linear movement difficult. Thus, the present article showcases an overview of the environments in which the wearables are employed. It elaborates their use in individual as well as team-related performance analyses with a special focus on reliability and validity, challenges, and future directions.},
+DOI = {10.3390/ijerph17010059}
 }
 
-@Article{ Beckman08,
-	title        = "Verifying Correct Usage of Atomic Blocks and Typestate",
-	author       = "Nels E. Beckman and Kevin Bierhoff and Jonathan Aldrich",
-	publisher    = "ACM",
-	address      = "New York, NY, USA",
-	journal      = "SIGPLAN Not.",
-	pages        = "227--244",
-	volume       = "43",
-	number       = "10",
-	year         = "2008",
-	issn         = "0362-1340",
-	doi          = "http://doi.acm.org/10.1145/1449955.1449783",
+@Article{impactWearable,
+AUTHOR = {Migliaccio, Gian Mario and Padulo, Johnny and Russo, Luca},
+TITLE = {The Impact of Wearable Technologies on Marginal Gains in Sports Performance: An Integrative Overview on Advances in Sports, Exercise, and Health},
+JOURNAL = {Applied Sciences},
+VOLUME = {14},
+YEAR = {2024},
+NUMBER = {15},
+ARTICLE-NUMBER = {6649},
+URL = {https://www.mdpi.com/2076-3417/14/15/6649},
+ISSN = {2076-3417},
+ABSTRACT = {Wearable technologies have become increasingly popular in recent years, as athletes and coaches look for ways to gain a competitive edge. These devices can track a variety of metrics, including heart rate, sleep quality, and movement patterns. This information can be used to identify areas for improvement and make small, incremental changes that can lead to significant gains in performance. The purpose of this narrative review is to provide an integrative overview of the literature on the impact of wearable technologies on marginal gains in sports performance. The literature review was conducted using the Scopus, PubMed, and Web of Science databases, and a total of 55 papers were considered eligible. The results of the literature overview suggest that wearable devices can be classified into three main categories. (1) Location-based wearables (LBW) track an athlete’s location and movement, which can be used to analyze training patterns and identify potential injury risks. (2) Biometric wearables (BMW) track physiological data such as heart rate, sleep quality, and body temperature; these data can be used to monitor an athlete’s fitness levels and identify signs of overtraining. (3) Performance wearables (PMW) track performance metrics such as power output, speed, and distance; this information can be used to optimize training programs and track progress over time. For each category, this paper provides the five most important data points measured by each suggested device. Additionally, sport-specific examples are provided for each category based on the literature data. The limitations of wearable devices, such as accuracy, validity, reliability, interpretability, and cost, are also discussed. However, despite these limitations, the results of the literature review suggest that wearable technologies can be a valuable tool for athletes and coaches who are looking to improve performance. Ultimately, this technological evolution in sports science is likely to dramatically change the state of the art in athletic monitoring and sports analytics.},
+DOI = {10.3390/app14156649}
 }
 
-@InProceedings{ Flanagan04,
-	author       = "Cormac Flanagan and Stephen N Freund",
-	title        = "Atomizer: a dynamic atomicity checker for multithreaded programs",
-	booktitle    = "POPL '04: Proceedings of the 31st ACM SIGPLAN-SIGACT symposium on Principles of programming languages",
-	year         = "2004",
-	isbn         = "1-58113-729-X",
-	pages        = "256--267",
-	location     = "Venice, Italy",
-	doi          = "http://doi.acm.org/10.1145/964001.964023",
-	publisher    = "ACM",
-	address      = "New York, NY, USA",
+@Article{smartSocks,
+AUTHOR = {Drăgulinescu, Andrei and Drăgulinescu, Ana-Maria and Zincă, Gabriela and Bucur, Doina and Feieș, Valentin and Neagu, Dumitru-Marius},
+TITLE = {Smart Socks and In-Shoe Systems: State-of-the-Art for Two Popular Technologies for Foot Motion Analysis, Sports, and Medical Applications},
+JOURNAL = {Sensors},
+VOLUME = {20},
+YEAR = {2020},
+NUMBER = {15},
+ARTICLE-NUMBER = {4316},
+URL = {https://www.mdpi.com/1424-8220/20/15/4316},
+PubMedID = {32748872},
+ISSN = {1424-8220},
+ABSTRACT = {The present paper reviews, for the first time, to the best of our knowledge, the most recent advances in research concerning two popular devices used for foot motion analysis and health monitoring: smart socks and in-shoe systems. The first one is representative of textile-based systems, whereas the second one is one of the most used pressure sensitive insole (PSI) systems that is used as an alternative to smart socks. The proposed methods are reviewed for smart sock use in special medical applications, for gait and foot pressure analysis. The Pedar system is also shown, together with studies of validation and repeatability for Pedar and other in-shoe systems. Then, the applications of Pedar are presented, mainly in medicine and sports. Our purpose was to offer the researchers in this field a useful means to overview and select relevant information. Moreover, our review can be a starting point for new, relevant research towards improving the design and functionality of the systems, as well as extending the research towards other areas of applications using sensors in smart textiles and in-shoe systems.},
+DOI = {10.3390/s20154316}
 }
 
-@Misc{ IBM-Rep,
-	title        = "{IBM's Concurrency Testing Repository}",
+@mastersthesis{porto,
+  author = {Bárbara França Domingues Cardoso},
+  school = {Faculdade De Engenharia Da Universidade Do Porto},
+  title = {Sensors fusion and movement analysis for sports performance optimization},
+  year = {2017},
+  URL = {https://repositorio-aberto.up.pt/bitstream/10216/108411/2/226423.pdf}
 }
 
-@InProceedings{ Praun03,
-	author       = "Christoph {von Praun} and Thomas R. Gross",
-	title        = "Static Detection of Atomicity Violations in Object-Oriented Programs",
-	booktitle    = "Journal of Object Technology",
-	year         = "2003",
-	pages        = "2004",
+@INPROCEEDINGS{preassureSensitive,
+  author={Langer, Josef and Eibensteiner, Florian and Peterka, Jürgen and Knaack, Philipp},
+  booktitle={2018 IEEE 12th International Conference on Application of Information and Communication Technologies (AICT)}, 
+  title={Pressure sensitive shoe insoles and socks for rehabilitation applications}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={1-6},
+  keywords={Footwear;Hardware;Position measurement;Pressure measurement;Smart textiles;Textiles;smart shoe insole;medical rehabilitaion;textile sensor;wearable sensor;piezo resistive fabric},
+  doi={10.1109/ICAICT.2018.8747024}
 }
 
-@InProceedings{ Shavit95,
-	author       = "Nir Shavit and Dan Touitou",
-	title        = "Software transactional memory",
-	booktitle    = "PODC '95: Proceedings of the fourteenth annual ACM symposium on Principles of distributed computing",
-	year         = "1995",
-	isbn         = "0-89791-710-3",
-	pages        = "204--213",
-	location     = "Ottowa, Ontario, Canada",
-	doi          = "http://doi.acm.org/10.1145/224964.224987",
-	publisher    = "ACM",
-	address      = "New York, NY, USA",
+@INPROCEEDINGS{energy,
+  author={Williamson, James and Qi Liu and Fenglong Lu and Mohrman, Wyatt and Kun Li and Dick, Robert and Li Shang},
+  booktitle={The 20th Asia and South Pacific Design Automation Conference}, 
+  title={Data sensing and analysis: Challenges for wearables}, 
+  year={2015},
+  volume={},
+  number={},
+  pages={136-141},
+  keywords={Sensors;Mobile handsets;Micromechanical devices;Biomedical monitoring;Batteries;Energy consumption;Quaternions},
+  doi={10.1109/ASPDAC.2015.7058994}
 }
 
-@BOOK{Silberschatz06,
-    author = {Silberschatz, Abraham and Korth, Henry F. and Sudarshan, S.},
-    title = {Database System Concepts},
-    publisher = {McGraw-Hill},
-    year = {2006},
-    edition = {Fifth},
-    isbn = {007-124476-X},
-    doi = {},
+@mastersthesis{masterInsole,
+  author = {Christian Lundberg},
+  school = {Technical University of Denmark},
+  title = { Data collection, management and visualisation for
+ IoT healthcare devices},
+  year = {2020}
 }
 
-@BOOK{Moss85,
-    author = {Moss, J. Eliot B.},
-    title = {Nested transactions: an approach to reliable distributed computing},
-    year = {1985},
-    isbn = {0-262-13200-1},
-    publisher = {Massachusetts Institute of Technology},
-    address = {Cambridge, MA, USA},
-    doi = {},
+@mastersthesis{bachelorInsole,
+  author = {Christian Rosenkilde Husted Kjær and Christopher Bonnevie Henriksen},
+  school = {Technical University of Denmark},
+  title = { Smart Sole- Classi cation of lifts using IoT technology},
+  year = {2021}
 }
-
-@Proceedings{ DBLP:conf/atva/2004,
-	editor       = "Farn Wang",
-	title        = "Automated Technology for Verification and Analysis: Second International Conference, ATVA 2004, Taipei, Taiwan, ROC, October 31-November 3, 2004. Proceedings",
-	booktitle    = "ATVA",
-	publisher    = "Springer",
-	series       = "Lecture Notes in Computer Science",
-	volume       = "3299",
-	year         = "2004",
-	isbn         = "3-540-23610-4",
-	bibsource    = "DBLP, http://dblp.uni-trier.de",
-}
-
-@InProceedings{ecoop12-dias,
-	author       = "Dias, Ricardo J. and Distefano, Dino and Seco, J. C. and Lourenço, João M.",
-	booktitle    = "Proceedings of the 26th European conference on Object-oriented programming ({ECOOP}'12)",
-	title        = "Verification of Snapshot Isolation in Transactional Memory Java Programs",
-	year         = "2012",
-	month        = jun,
-	publisher    = "Springer-Verlag",
-}
-
-@online{wiki:shuntingyard,
-    author = "Wikipedia contributors",
-    title = "Shunting-yard algorithm --- Wikipedia{,} The Free Encyclopedia",
-    year = "2017",
-    month = "3",
-    url = "https://en.wikipedia.org/w/index.php?title=Shunting-yard_algorithm&oldid=817901155",
-    urldate = {2018-03-01},
-    keywords  = "Dijkstra,prefix"
-}
-
-@online{bison,
-    url = {https://www.gnu.org/software/bison/},
-    urldate = {2020-07-26},
-    keywords = {parser,generator},
-    title = {Gnu Bison},
-}
-
-@online{flex,
-    url = {https://github.com/westes/flex},
-    urldate = {2020-07-26},
-    keywords = {lexical,analyser},
-    title = {Fast Lexical Analyser},
-}
-
