--- a/Config/9_nova_fct.tex
+++ b/Config/9_nova_fct.tex
@@ -25,12 +25,7 @@
 %============================================================
 
 
-%%============================================================
-% The following is only relevant for the ADC Report of Computer Science students
-%%------------------------------------------------------------
-% \ntsetup{nova/fct/company/logo=google-logo}
-% \ntsetup{nova/fct/company/name=Google}
-%%============================================================
+
 
 
 %============================================================
@@ -63,8 +58,8 @@
 % \ntdepartment(pt){Departamento de\\Engenharia Civil}
 % \ntdepartment(en){Department of\\Civil Engineering}
 
-% \ntdepartment(pt){Departamento de Engenharia\\Eletrotécnica e de Computadores}
-% \ntdepartment(en){Department of Electrical\\and Computer Engineering}
+\ntdepartment(pt){Departamento de Engenharia\\Eletrotécnica e de Computadores}
+\ntdepartment(en){Department of Electrical\\and Computer Engineering}
 
 % \ntdepartment(pt){Departamento de\\Engenharia Mecânica e Industrial}
 % \ntdepartment(en){Department of\\Mechanical and Industrial Engineering}
@@ -239,8 +234,8 @@
 %\ntdegreename(pt){Engenharia Civil}
 %\ntdegreename(en){Civil Engineering}
 
-%\ntdegreename(pt){Engenharia Eletrotécnica e de Computadores}
-%\ntdegreename(en){Electrical and Computer Engineering}
+\ntdegreename(pt){Engenharia Eletrotécnica e de Computadores}
+\ntdegreename(en){Electrical and Computer Engineering}
 
 %\ntdegreename(pt){Engenharia Física}
 %\ntdegreename(en){Physics Engineering}
