--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -1,148 +1,299 @@
-% Encoding: UTF-8
+@ARTICLE{wearablesAndIOT,
+  author={John Dian, F. and Vahidnia, Reza and Rahmati, Alireza},
+  journal={IEEE Access}, 
+  title={Wearables and the Internet of Things (IoT), Applications, Opportunities, and Challenges: A Survey}, 
+  year={2020},
+  volume={8},
+  number={},
+  pages={69200-69211},
+  keywords={Biomedical monitoring;Temperature sensors;Monitoring;Internet of Things;Wearable sensors;Temperature measurement;Smart wearables;Internet of Things;cellular IoT},
+  doi={10.1109/ACCESS.2020.2986329}}
 
-@InProceedings{ Artho04,
-	author       = "Cyrille Artho and Klaus Havelund and Armin Biere",
-	title        = "Using Block-Local Atomicity to Detect Stale-Value Concurrency Errors",
-	booktitle    = "ATVA",
-	year         = "2004",
-	pages        = "150--164",
-	crossref     = "DBLP:conf/atva/2004",
-	bibsource    = "DBLP, http://dblp.uni-trier.de",
-	ee           = "http://springerlink.metapress.com/openurl.asp?genre=article{\&}issn=0302-9743{\&}volume=3299{\&}spage=150",
+@Article{16sensors,
+AUTHOR = {Ciniglio, Alfredo and Guiotto, Annamaria and Spolaor, Fabiola and Sawacha, Zimi},
+TITLE = {The Design and Simulation of a 16-Sensors Plantar Pressure Insole Layout for Different Applications: From Sports to Clinics, a Pilot Study},
+JOURNAL = {Sensors},
+VOLUME = {21},
+YEAR = {2021},
+NUMBER = {4},
+ARTICLE-NUMBER = {1450},
+URL = {https://www.mdpi.com/1424-8220/21/4/1450},
+PubMedID = {33669674},
+ISSN = {1424-8220},
+ABSTRACT = {The quantification of plantar pressure distribution is widely done in the diagnosis of lower limbs deformities, gait analysis, footwear design, and sport applications. To date, a number of pressure insole layouts have been proposed, with different configurations according to their applications. The goal of this study is to assess the validity of a 16-sensors (1.5 × 1.5 cm) pressure insole to detect plantar pressure distribution during different tasks in the clinic and sport domains. The data of 39 healthy adults, acquired with a Pedar-X® system (Novel GmbH, Munich, Germany) during walking, weight lifting, and drop landing, were used to simulate the insole. The sensors were distributed by considering the location of the peak pressure on all trials: 4 on the hindfoot, 3 on the midfoot, and 9 on the forefoot. The following variables were computed with both systems and compared by estimating the Root Mean Square Error (RMSE): Peak/Mean Pressure, Ground Reaction Force (GRF), Center of Pressure (COP), the distance between COP and the origin, the Contact Area. The lowest (0.61%) and highest (82.4%) RMSE values were detected during gait on the medial-lateral COP and the GRF, respectively. This approach could be used for testing different layouts on various applications prior to production.},
+DOI = {10.3390/s21041450}
 }
 
-@online{ Parkins2017,
-	author       = "Parkins, David",
-	booktitle    = "Economist (United Kingdom)",
-	issn         = "00130613",
-	mendeley     = "I4.0/BigData",
-	number       = "9035",
-	title        = "{Regulating the internet giants: The world's most valuable resource is no longer oil, but data}",
-	url          = "https://www.economist.com/leaders/2017/05/06/the-worlds-most-valuable-resource-is-no-longer-oil-but-data?fbclid=IwAR1EaO3g6OJoDuhrHBNyqQJAqR2NyhvcZ07uexTWa3Hujq0azNMVHKhQido",
-	urldate      = "2020-01-21",
-	volume       = "413",
-	year         = "2017",
+@Article{biomechanicalPerfomance,
+AUTHOR = {McDevitt, Sam and Hernandez, Haley and Hicks, Jamison and Lowell, Russell and Bentahaikt, Hamza and Burch, Reuben and Ball, John and Chander, Harish and Freeman, Charles and Taylor, Courtney and Anderson, Brock},
+TITLE = {Wearables for Biomechanical Performance Optimization and Risk Assessment in Industrial and Sports Applications},
+JOURNAL = {Bioengineering},
+VOLUME = {9},
+YEAR = {2022},
+NUMBER = {1},
+ARTICLE-NUMBER = {33},
+URL = {https://www.mdpi.com/2306-5354/9/1/33},
+PubMedID = {35049742},
+ISSN = {2306-5354},
+ABSTRACT = {Wearable technologies are emerging as a useful tool with many different applications. While these devices are worn on the human body and can capture numerous data types, this literature review focuses specifically on wearable use for performance enhancement and risk assessment in industrial- and sports-related biomechanical applications. Wearable devices such as exoskeletons, inertial measurement units (IMUs), force sensors, and surface electromyography (EMG) were identified as key technologies that can be used to aid health and safety professionals, ergonomists, and human factors practitioners improve user performance and monitor risk. IMU-based solutions were the most used wearable types in both sectors. Industry largely used biomechanical wearables to assess tasks and risks wholistically, which sports often considered the individual components of movement and performance. Availability, cost, and adoption remain common limitation issues across both sports and industrial applications.},
+DOI = {10.3390/bioengineering9010033}
 }
 
-@Misc{ Artho03,
-	author       = "C. Artho and K. Havelund and A. Biere",
-	title        = "High-Level Data Races",
-	text         = "C. Artho, K. Havelund, and A. Biere. High-Level Data Races. In VVEIS'03, The First International Workshop on Verification and Validation of Enterprise Information Systems, April 2003. Angers, France.",
-	year         = "2003",
-	url          = "citeseer.ist.psu.edu/artho03highlevel.html",
+@Article{performanceAndTactics,
+AUTHOR = {Lutz, Jonas and Memmert, Daniel and Raabe, Dominik and Dornberger, Rolf and Donath, Lars},
+TITLE = {Wearables for Integrative Performance and Tactic Analyses: Opportunities, Challenges, and Future Directions},
+JOURNAL = {International Journal of Environmental Research and Public Health},
+VOLUME = {17},
+YEAR = {2020},
+NUMBER = {1},
+ARTICLE-NUMBER = {59},
+URL = {https://www.mdpi.com/1660-4601/17/1/59},
+PubMedID = {31861754},
+ISSN = {1660-4601},
+ABSTRACT = {Micro-electromechanical systems (MEMS) have reduced drastically in size, cost, and power consumption, while improving accuracy. The combination of different sensor technologies is considered a promising step in the monitoring of athletes. Those “wearables” enable the capturing of relevant physiological and tactical information in individual and team sports and thus replacing subjective, time-consuming and qualitative methods with objective, quantitative ones. Prior studies mainly comprised sports categories such as: targeting sports, batting and fielding games as well as net and wall games, focusing on the detection of individual, non-locomotive movements. The increasing capabilities of wearables allow for more complex and integrative analysis expanding research into the last category: invasion sports. Such holistic approaches allow the derivation of metrics, estimation of physical conditions and the analysis of team strategic behavior, accompanied by integrative knowledge gains in technical, tactical, physical, and mental aspects of a sport. However, prior and current researchers find the precise measurement of the actual movement within highly dynamic and non-linear movement difficult. Thus, the present article showcases an overview of the environments in which the wearables are employed. It elaborates their use in individual as well as team-related performance analyses with a special focus on reliability and validity, challenges, and future directions.},
+DOI = {10.3390/ijerph17010059}
 }
 
-@Article{ Beckman08,
-	title        = "Verifying Correct Usage of Atomic Blocks and Typestate",
-	author       = "Nels E. Beckman and Kevin Bierhoff and Jonathan Aldrich",
-	publisher    = "ACM",
-	address      = "New York, NY, USA",
-	journal      = "SIGPLAN Not.",
-	pages        = "227--244",
-	volume       = "43",
-	number       = "10",
-	year         = "2008",
-	issn         = "0362-1340",
-	doi          = "http://doi.acm.org/10.1145/1449955.1449783",
+@Article{impactWearable,
+AUTHOR = {Migliaccio, Gian Mario and Padulo, Johnny and Russo, Luca},
+TITLE = {The Impact of Wearable Technologies on Marginal Gains in Sports Performance: An Integrative Overview on Advances in Sports, Exercise, and Health},
+JOURNAL = {Applied Sciences},
+VOLUME = {14},
+YEAR = {2024},
+NUMBER = {15},
+ARTICLE-NUMBER = {6649},
+URL = {https://www.mdpi.com/2076-3417/14/15/6649},
+ISSN = {2076-3417},
+ABSTRACT = {Wearable technologies have become increasingly popular in recent years, as athletes and coaches look for ways to gain a competitive edge. These devices can track a variety of metrics, including heart rate, sleep quality, and movement patterns. This information can be used to identify areas for improvement and make small, incremental changes that can lead to significant gains in performance. The purpose of this narrative review is to provide an integrative overview of the literature on the impact of wearable technologies on marginal gains in sports performance. The literature review was conducted using the Scopus, PubMed, and Web of Science databases, and a total of 55 papers were considered eligible. The results of the literature overview suggest that wearable devices can be classified into three main categories. (1) Location-based wearables (LBW) track an athlete’s location and movement, which can be used to analyze training patterns and identify potential injury risks. (2) Biometric wearables (BMW) track physiological data such as heart rate, sleep quality, and body temperature; these data can be used to monitor an athlete’s fitness levels and identify signs of overtraining. (3) Performance wearables (PMW) track performance metrics such as power output, speed, and distance; this information can be used to optimize training programs and track progress over time. For each category, this paper provides the five most important data points measured by each suggested device. Additionally, sport-specific examples are provided for each category based on the literature data. The limitations of wearable devices, such as accuracy, validity, reliability, interpretability, and cost, are also discussed. However, despite these limitations, the results of the literature review suggest that wearable technologies can be a valuable tool for athletes and coaches who are looking to improve performance. Ultimately, this technological evolution in sports science is likely to dramatically change the state of the art in athletic monitoring and sports analytics.},
+DOI = {10.3390/app14156649}
 }
 
-@InProceedings{ Flanagan04,
-	author       = "Cormac Flanagan and Stephen N Freund",
-	title        = "Atomizer: a dynamic atomicity checker for multithreaded programs",
-	booktitle    = "POPL '04: Proceedings of the 31st ACM SIGPLAN-SIGACT symposium on Principles of programming languages",
-	year         = "2004",
-	isbn         = "1-58113-729-X",
-	pages        = "256--267",
-	location     = "Venice, Italy",
-	doi          = "http://doi.acm.org/10.1145/964001.964023",
-	publisher    = "ACM",
-	address      = "New York, NY, USA",
+@Article{smartSocks,
+AUTHOR = {Drăgulinescu, Andrei and Drăgulinescu, Ana-Maria and Zincă, Gabriela and Bucur, Doina and Feieș, Valentin and Neagu, Dumitru-Marius},
+TITLE = {Smart Socks and In-Shoe Systems: State-of-the-Art for Two Popular Technologies for Foot Motion Analysis, Sports, and Medical Applications},
+JOURNAL = {Sensors},
+VOLUME = {20},
+YEAR = {2020},
+NUMBER = {15},
+ARTICLE-NUMBER = {4316},
+URL = {https://www.mdpi.com/1424-8220/20/15/4316},
+PubMedID = {32748872},
+ISSN = {1424-8220},
+ABSTRACT = {The present paper reviews, for the first time, to the best of our knowledge, the most recent advances in research concerning two popular devices used for foot motion analysis and health monitoring: smart socks and in-shoe systems. The first one is representative of textile-based systems, whereas the second one is one of the most used pressure sensitive insole (PSI) systems that is used as an alternative to smart socks. The proposed methods are reviewed for smart sock use in special medical applications, for gait and foot pressure analysis. The Pedar system is also shown, together with studies of validation and repeatability for Pedar and other in-shoe systems. Then, the applications of Pedar are presented, mainly in medicine and sports. Our purpose was to offer the researchers in this field a useful means to overview and select relevant information. Moreover, our review can be a starting point for new, relevant research towards improving the design and functionality of the systems, as well as extending the research towards other areas of applications using sensors in smart textiles and in-shoe systems.},
+DOI = {10.3390/s20154316}
 }
 
-@Misc{ IBM-Rep,
-	title        = "{IBM's Concurrency Testing Repository}",
+@mastersthesis{porto,
+  author = {Bárbara França Domingues Cardoso},
+  school = {Faculdade De Engenharia Da Universidade Do Porto},
+  title = {Sensors fusion and movement analysis for sports performance optimization},
+  year = {2017},
+  URL = {https://repositorio-aberto.up.pt/bitstream/10216/108411/2/226423.pdf}
 }
 
-@InProceedings{ Praun03,
-	author       = "Christoph {von Praun} and Thomas R. Gross",
-	title        = "Static Detection of Atomicity Violations in Object-Oriented Programs",
-	booktitle    = "Journal of Object Technology",
-	year         = "2003",
-	pages        = "2004",
+@INPROCEEDINGS{preassureSensitive,
+  author={Langer, Josef and Eibensteiner, Florian and Peterka, Jürgen and Knaack, Philipp},
+  booktitle={2018 IEEE 12th International Conference on Application of Information and Communication Technologies (AICT)}, 
+  title={Pressure sensitive shoe insoles and socks for rehabilitation applications}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={1-6},
+  keywords={Footwear;Hardware;Position measurement;Pressure measurement;Smart textiles;Textiles;smart shoe insole;medical rehabilitaion;textile sensor;wearable sensor;piezo resistive fabric},
+  doi={10.1109/ICAICT.2018.8747024}
 }
 
-@InProceedings{ Shavit95,
-	author       = "Nir Shavit and Dan Touitou",
-	title        = "Software transactional memory",
-	booktitle    = "PODC '95: Proceedings of the fourteenth annual ACM symposium on Principles of distributed computing",
-	year         = "1995",
-	isbn         = "0-89791-710-3",
-	pages        = "204--213",
-	location     = "Ottowa, Ontario, Canada",
-	doi          = "http://doi.acm.org/10.1145/224964.224987",
-	publisher    = "ACM",
-	address      = "New York, NY, USA",
+@INPROCEEDINGS{challengesWearables,
+  author={Williamson, James and Qi Liu and Fenglong Lu and Mohrman, Wyatt and Kun Li and Dick, Robert and Li Shang},
+  booktitle={The 20th Asia and South Pacific Design Automation Conference}, 
+  title={Data sensing and analysis: Challenges for wearables}, 
+  year={2015},
+  volume={},
+  number={},
+  pages={136-141},
+  keywords={Sensors;Mobile handsets;Micromechanical devices;Biomedical monitoring;Batteries;Energy consumption;Quaternions},
+  doi={10.1109/ASPDAC.2015.7058994}
 }
 
-@Book{ Silberschatz06,
-	author       = "Abraham Silberschatz and Henry F. Korth and S. Sudarshan",
-	title        = "Database System Concepts",
-	publisher    = "McGraw-Hill",
-	year         = "2006",
-	edition      = "Fifth",
-	isbn         = "007-124476-X",
+@mastersthesis{masterInsole,
+  author = {Christian Lundberg},
+  school = {Technical University of Denmark},
+  title = { Data collection, management and visualisation for
+ IoT healthcare devices},
+  year = {2020}
 }
 
-@Book{ Moss85,
-	author       = "J. Eliot and B. Moss",
-	title        = "Nested transactions: an approach to reliable distributed computing",
-	year         = "1985",
-	isbn         = "0-262-13200-1",
-	publisher    = "Massachusetts Institute of Technology",
-	address      = "Cambridge, MA, USA",
+@mastersthesis{bachelorInsole,
+  author = {Christian Rosenkilde Husted Kjær and Christopher Bonnevie Henriksen},
+  school = {Technical University of Denmark},
+  title = { Smart Sole- Classi cation of lifts using IoT technology},
+  year = {2021}
 }
 
-@Proceedings{ DBLP:conf/atva/2004,
-	editor       = "Farn Wang",
-	title        = "Automated Technology for Verification and Analysis: Second International Conference, ATVA 2004, Taipei, Taiwan, ROC, October 31-November 3, 2004. Proceedings",
-	booktitle    = "ATVA",
-	publisher    = "Springer",
-	series       = "Lecture Notes in Computer Science",
-	volume       = "3299",
-	year         = "2004",
-	isbn         = "3-540-23610-4",
-	bibsource    = "DBLP, http://dblp.uni-trier.de",
+@misc{lowerBack,
+  author = {World Health Organization},
+  URL = {https://www.who.int/news-room/fact-sheets/detail/low-back-pain},
+  title = {Low back pain},
+  year = {2023}
 }
 
-@InProceedings{ecoop12-dias,
-	author       = "Dias, Ricardo J. and Distefano, Dino and Seco, J. C. and Lourenço, João M.",
-	booktitle    = "Proceedings of the 26th European conference on Object-oriented programming ({ECOOP}'12)",
-	title        = "Verification of Snapshot Isolation in Transactional Memory Java Programs",
-	year         = "2012",
-	month        = jun,
-	publisher    = "Springer-Verlag",
+@book{gaitBook,
+author = {Levine, David and Richards, Jim and Whittle, Michael},
+year = {2012},
+month = {07},
+pages = {},
+title = {Whittle's gait analysis},
+isbn = {9780702042652}
 }
 
-@online{wiki:shuntingyard,
-    author = "Wikipedia contributors",
-    title = "Shunting-yard algorithm --- Wikipedia{,} The Free Encyclopedia",
-    year = "2017",
-    month = "3",
-    url = "https://en.wikipedia.org/w/index.php?title=Shunting-yard_algorithm&oldid=817901155",
-    urldate = {2018-03-01},
-    keywords  = "Dijkstra,prefix"
+@Article{injuryWalking,
+AUTHOR = {Nagano, Hanatsu and Begg, Rezaul K.},
+TITLE = {Shoe-Insole Technology for Injury Prevention in Walking},
+JOURNAL = {Sensors},
+VOLUME = {18},
+YEAR = {2018},
+NUMBER = {5},
+ARTICLE-NUMBER = {1468},
+URL = {https://www.mdpi.com/1424-8220/18/5/1468},
+PubMedID = {29738486},
+ISSN = {1424-8220},
+ABSTRACT = {Impaired walking increases injury risk during locomotion, including falls-related acute injuries and overuse damage to lower limb joints. Gait impairments seriously restrict voluntary, habitual engagement in injury prevention activities, such as recreational walking and exercise. There is, therefore, an urgent need for technology-based interventions for gait disorders that are cost effective, willingly taken-up, and provide immediate positive effects on walking. Gait control using shoe-insoles has potential as an effective population-based intervention, and new sensor technologies will enhance the effectiveness of these devices. Shoe-insole modifications include: (i) ankle joint support for falls prevention; (ii) shock absorption by utilising lower-resilience materials at the heel; (iii) improving reaction speed by stimulating cutaneous receptors; and (iv) preserving dynamic balance via foot centre of pressure control. Using sensor technology, such as in-shoe pressure measurement and motion capture systems, gait can be precisely monitored, allowing us to visualise how shoe-insoles change walking patterns. In addition, in-shoe systems, such as pressure monitoring and inertial sensors, can be incorporated into the insole to monitor gait in real-time. Inertial sensors coupled with in-shoe foot pressure sensors and global positioning systems (GPS) could be used to monitor spatiotemporal parameters in real-time. Real-time, online data management will enable ‘big-data’ applications to everyday gait control characteristics.},
+DOI = {10.3390/s18051468}
 }
 
-@online{bison,
-    url = {https://www.gnu.org/software/bison/},
-    urldate = {2020-07-26},
-    keywords = {parser,generator},
-    title = {Gnu Bison},
+@INPROCEEDINGS{basketballFootwork,
+  author={Peng, Min and Zhang, Zhong and Zhou, Qingfeng},
+  booktitle={2020 IEEE/CIC International Conference on Communications in China (ICCC)}, 
+  title={Basketball Footwork Recognition using Smart Insoles Integrated with Multiple Sensors}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={1202-1207},
+  keywords={Support vector machines;Training;Sensor phenomena and characterization;Feature extraction;Sensor systems;Classification algorithms;Intelligent sensors;smart insoles;wearable sensors;basketball footwork;K-Nearest Neighbors;Support Vector Machines;Convolutional Neural Networks;motion recognition},
+  doi={10.1109/ICCC49849.2020.9238862}
 }
 
-@online{flex,
-    url = {https://github.com/westes/flex},
-    urldate = {2020-07-26},
-    keywords = {lexical,analyser},
-    title = {Fast Lexical Analyser},
+@Article{reviewWearableTech,
+AUTHOR = {Seçkin, Ahmet Çağdaş and Ateş, Bahar and Seçkin, Mine},
+TITLE = {Review on Wearable Technology in Sports: Concepts, Challenges and Opportunities},
+JOURNAL = {Applied Sciences},
+VOLUME = {13},
+YEAR = {2023},
+NUMBER = {18},
+ARTICLE-NUMBER = {10399},
+URL = {https://www.mdpi.com/2076-3417/13/18/10399},
+ISSN = {2076-3417},
+ABSTRACT = {Wearable technology is increasingly vital for improving sports performance through real-time data analysis and tracking. Both professional and amateur athletes rely on wearable sensors to enhance training efficiency and competition outcomes. However, further research is needed to fully understand and optimize their potential in sports. This comprehensive review explores the measurement and monitoring of athletic performance, injury prevention, rehabilitation, and overall performance optimization using body wearable sensors. By analyzing wearables’ structure, research articles across various sports, and commercial sensors, the review provides a thorough analysis of wearable sensors in sports. Its findings benefit athletes, coaches, healthcare professionals, conditioners, managers, and researchers, offering a detailed summary of wearable technology in sports. The review is expected to contribute to future advancements in wearable sensors and biometric data analysis, ultimately improving sports performance. Limitations such as privacy concerns, accuracy issues, and costs are acknowledged, stressing the need for legal regulations, ethical principles, and technical measures for safe and fair use. The importance of personalized devices and further research on athlete comfort and performance impact is emphasized. The emergence of wearable imaging devices holds promise for sports rehabilitation and performance monitoring, enabling enhanced athlete health, recovery, and performance in the sports industry.},
+DOI = {10.3390/app131810399}
+}
+
+@misc{hawksWear,
+  title = {Injury Prevention Technology? Hawks Players Are Wearing It},
+  year = {2015},
+  URL = {https://www.nba.com/hawks/features/injury-prevention-technology-hawks-players-are-wearing-it}
+}
+
+@misc{NBPAWearables,
+  title = {NBA, NBPA Use Wearables To Study Player Health and Wellness},
+  year = {2024},
+  URL = {https://athletechnews.com/nba-nbpa-use-wearables-to-study-player-health-wellness/}
+}
+
+@article{devInsole,
+title = {Development of a Smart Insole for Medical and Sports Purposes},
+journal = {Procedia Engineering},
+volume = {112},
+pages = {152-156},
+year = {2015},
+note = {'The Impact of Technology on Sport VI' 7th Asia-Pacific Congress on Sports Technology, APCST2015},
+issn = {1877-7058},
+doi = {https://doi.org/10.1016/j.proeng.2015.07.191},
+url = {https://www.sciencedirect.com/science/article/pii/S187770581501440X},
+author = {Adin Ming Tan and Franz Konstantin Fuss and Yehuda Weizman and Olga Troynikov},
+keywords = {Smart Insole, plantar pressure measurement, gait analysis, piezoresistive material, high resolution.},
+abstract = {A study was conducted to determine the performance of a low cost plantar measuring device. The aim of the device was to establish an in-shoe measurement system with high resolution and to take relatively accurate measurements. The calibration method for the smart material was established with the use of a Kistler force plate. The coefficient of determination r2 of the force against resistance calibration curve was 0.974. The residual standard deviation amounted to 13.91N. The r2 value of the repetitive loading experiments amounted to 0.981. The residual standard deviation was 70.35N for forces larger than 700N. From the data obtained, the insole is deemed to be sufficiently accurate for quantitative analysis.}
+}
+
+@INPROCEEDINGS{basketballMotions,
+  author={Shi, Shaodong and Zhou, Qing F. and Peng, M. and Cheng, Xusheng},
+  booktitle={2018 IEEE 4th International Conference on Computer and Communications (ICCC)}, 
+  title={Utilize Smart Insole to Recognize Basketball Motions}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={1430-1434},
+  keywords={Feature extraction;Clustering algorithms;Turning;Sports;Training;Motion detection;Task analysis;wearable device;smart insole;machine learning;K-means;basketball;motion recognition},
+  doi={10.1109/CompComm.2018.8780718}}
+
+
+@article{coimbra,
+author = {Amaro, Catarina and Castro, Maria António and Roseiro, Luis and Neto, Maria and Amaro, Ana},
+year = {2020},
+month = {12},
+pages = {8691},
+title = {Plantar Pressure Evaluation during the Season in Five Basketball Movements},
+volume = {10},
+journal = {Applied Sciences},
+doi = {10.3390/app10238691}
+}
+
+@INPROCEEDINGS{freewalker,
+  author={Wang, Baitong and Rajput, Kuldeep Singh and Tam, Wing-Kin and Tung, Anthony K. H. and Yang, Zhi},
+  booktitle={2015 37th Annual International Conference of the IEEE Engineering in Medicine and Biology Society (EMBC)}, 
+  title={FreeWalker: a smart insole for longitudinal gait analysis}, 
+  year={2015},
+  pages={3723-3726},
+  keywords={Foot;Pressure sensors;Accelerometers;Gyroscopes;Force;Real-time systems},
+  doi={10.1109/EMBC.2015.7319202}}
+
+@article{posDuringWalking,
+author = {Chumanov, Elizabeth and Remy, Christian and Thelen, Darryl},
+title = {Tracking the Position of Insole Pressure Sensors during Walking and Running}
+}
+
+@INPROCEEDINGS{snowboard,
+  author={Holleczek, Thomas and Rüegg, Alex and Harms, Holger and Tröster, Gerhard},
+  booktitle={SENSORS, 2010 IEEE}, 
+  title={Textile pressure sensors for sports applications}, 
+  year={2010},
+  pages={732-737},
+  keywords={Textiles;Foot;Capacitive sensors;Pressure measurement;Capacitance},
+  doi={10.1109/ICSENS.2010.5690041}}
+
+  @INPROCEEDINGS{embedding,
+  author={Hubl, M. and Pohl, O. and Noack, V. and Hahlweg, P. and Ehm, C. and Derleh, M. and Weiland, T. and Schick, E. and Müller, H-H. and Hampicke, D. and Gregorius, P. and Schwartzinger, T. and Jablonski, T. and Maurer, J.-P. and Hahn, R. and Ehrmann, O. and Lang, K.-D. and Shin, E. and Ngo, H.-D.},
+  booktitle={2016 IEEE 18th Electronics Packaging Technology Conference (EPTC)}, 
+  title={Embedding of wearable electronics into smart sensor insole}, 
+  year={2016},
+  volume={},
+  number={},
+  pages={597-601},
+  keywords={Footwear;Batteries;Microcontrollers;Energy harvesting;Wearable computers;Wireless sensor networks;Wireless communication},
+  doi={10.1109/EPTC.2016.7861550}}
+
+@article{deepLearn,
+author = {Tian, Yu and Zhang, Lei and Zhang, Chi and Bao, Bo and Li, Qingtong and Wang, Longfei and Song, Zhenqiang and Li, Dachao},
+year = {2023},
+month = {11},
+pages = {},
+title = {Deep‐learning enabled smart insole system aiming for multifunctional foot‐healthcare applications},
+volume = {4},
+journal = {Exploration},
+doi = {10.1002/EXP.20230109}
+}
+
+@article{perspective,
+title = {Intelligent health and sport: An interplay between flexible sensors and basketball},
+journal = {iScience},
+volume = {27},
+number = {3},
+pages = {109089},
+year = {2024},
+issn = {2589-0042},
+doi = {https://doi.org/10.1016/j.isci.2024.109089},
+url = {https://www.sciencedirect.com/science/article/pii/S2589004224003109},
+author = {Hongtao Zeng and Yu He and Ruolan Zhao and Zhangcheng Li and Wen Wang and Maiping Yang and Pan Li and Guangming Tao and Jingbo Sun and Chong Hou},
+keywords = {Sports medicine, Physics, Engineering},
+abstract = {Summary
+Basketball, as one of the most popular sports in the world, has millions of followers and massive economic value. Basketball evolves so fast that it requires teams with smarter strategies, better skills, and stronger players. However, the competition strategies and training methods in basketball are still experience-based, lacking precise data to drive for more efficient training and strategies. On the other hand, flexible sensors, as a new class of sensors, have been a hotspot for scientific research and widely applied in various fields. Due to their excellent characteristics of flexibility, wearing comfort, convenience, and response speed, integrating flexible sensors into basketball has the potential to greatly promote all aspects of the sport. This paper aims to bring more fusion between basketball and flexible sensors. In this perspective, we first perform a review of the history of sensing technologies in the basketball sport and discuss mechanisms of flexible sensors applied on basketball players. Then specific scenarios for flexible sensors applied in basketball were elaborated on in detail. Finally, we envision the potential applications of flexible sensors in basketball and present our views on future development directions. We hope this paper can depict how flexible sensing technology is integrated into basketball systems and point out the future development of basketball with the help of flexible sensors.}
 }
