--- a/Config/4_files.tex
+++ b/Config/4_files.tex
@@ -27,13 +27,13 @@
 % File with the dedicatory text. Will only be considered for final documents,
 %   i.e., "bsc", "msc" and "phd", otherwise, it will be silently ignored
 %   syntax: \ntaddfile{dedicatory}{filename}
-\ntaddfile{dedicatory}{dedicatory}
+%\ntaddfile{dedicatory}{dedicatory}
 
 %%------------------------------------------------------------
 % File with the acknowledgments text. Will only be considered for final documents,
 %   i.e., "bsc", "msc" and "phd", otherwise, it will be silently ignored
 %   syntax: \ntaddfile{acknowledgements}{filename}
-\ntaddfile{acknowledgements}{acknowledgements}
+%\ntaddfile{acknowledgements}{acknowledgements}
 
 %%------------------------------------------------------------
 % File with the quote text. Will only be considered for final documents,
@@ -44,8 +44,8 @@
 %%------------------------------------------------------------
 % Abstract files in multiple languages
 %   syntax: \ntaddfile{abstract}[language]{filename}
-\ntaddfile{abstract}[pt]{abstract-pt}  % Abstract in Portuguese
-\ntaddfile{abstract}[en]{abstract-en}  % Abstract in English
+%\ntaddfile{abstract}[pt]{abstract-pt}  % Abstract in Portuguese
+%\ntaddfile{abstract}[en]{abstract-en}  % Abstract in English
 % \ntaddfile{abstract}[de]{abstract-de}  % Abstract in German
 % \ntaddfile{abstract}[es]{abstract-es}  % Abstract in Spanish
 % \ntaddfile{abstract}[fr]{abstract-fr}  % Abstract in French
@@ -77,13 +77,13 @@
 %%------------------------------------------------------------
 % Text appendices
 % syntax: \ntaddfile{appendix}{filename}
-\ntaddfile{appendix}{appendix1}
-\ntaddfile{appendix}{appendix2}
+%\ntaddfile{appendix}{appendix1}
+%\ntaddfile{appendix}{appendix2}
 
 %%------------------------------------------------------------
 % Text annexes
 % syntax: \ntaddfile{annex}{filename}
-\ntaddfile{annex}{annex1}
+%\ntaddfile{annex}{annex1}
 % \ntaddfile{annex}{annex2}
 % \ntaddfile{annex}{annex2}
 
