--- a/Config/5_packages.tex
+++ b/Config/5_packages.tex
@@ -12,11 +12,11 @@
 %%============================================================
 %%  FOR DEMO PURPOSES ONLY --- YOU SHOULD REMOVE THESE PACKAGES
 %%============================================================
-\usepackage{float}        % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
-\usepackage{wrapfig}      % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
-\restylefloat{figure}     % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
-\usepackage{metalogo}     % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
-\usepackage{lipsum}       % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
+%\usepackage{float}        % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
+%\usepackage{wrapfig}      % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
+%\restylefloat{figure}     % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
+%\usepackage{metalogo}     % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
+%\usepackage{lipsum}       % FOR DEMO PURPOSES ONLY --- PLEASE REMOVE
 \IfFileExists{byo-twemojiss.sty}{
   \usepackage{byo-twemojis}     % to typeset emojis
   \newcommand{\emojiSmile}{\raisebox{-3pt}{\scalebox{1.3}{\byoTwemoji{head; eyes normal opened; mouth laughing}}}}
@@ -83,4 +83,3 @@
 %       {ç}{{\c c}}1 {Ç}{{\c C}}1 {ø}{{\o}}1 {å}{{\r a}}1 {Å}{{\r A}}1
 %       {€}{{\EUR}}1 {£}{{\pounds}}1
 % }
-
